--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Inspeckage</string>
 
-
-    <string name="action_close">Закрыть</string>
+    <string name="action_close">Выход</string>
     <string name="title_activity_main">Inspeckage</string>
 
     <string name="navigation_drawer_open">Открыть панель навигации</string>
@@ -12,24 +11,24 @@
     <string name="action_config">Kонфигурация</string>
     <string name="action_clear">Очистить</string>
 
-    <string name="action_divider">Cообщаться</string>
+    <string name="action_divider">Коммуникации</string>
 
     <string name="action_share">Поделиться</string>
 
-    <string name="fragment_main_only_user">Only user app</string>
-    <string name="fragment_config_launch">Launch App</string>
-    <string name="fragment_config_choose">choose target</string>
-    <string name="fragment_config_started">Started on:</string>
-    <string name="fragment_config_access_adb">Access with ADB:</string>
+    <string name="fragment_main_only_user">Только польз. приложения</string>
+    <string name="fragment_config_launch">Запустить</string>
+    <string name="fragment_config_choose">Выберите цель:</string>
+    <string name="fragment_config_started">Доступ через web-панель:</string>
+    <string name="fragment_config_access_adb">Доступ через ADB:</string>
     <string name="package_inspector">Package Inspector</string>
 
-    <string name="fragment_config_server_port">Server Port</string>
-    <string name="fragment_config_web_socket_port">Web Socket Port (logcat)</string>
+    <string name="fragment_config_server_port">Порт сервера</string>
+    <string name="fragment_config_web_socket_port">Web Socket порт (logcat)</string>
     <string name="fragment_config_btn_apply">Применять</string>
 
-    <string name="module_disabled">Module disabled</string>
-    <string name="server_stopped">Server stopped</string>
-    <string name="module_enabled">Module enabled</string>
-    <string name="server_started">Server started</string>
+    <string name="module_disabled">Модуль не активен</string>
+    <string name="server_stopped">Сервер остановлен</string>
+    <string name="module_enabled">Модуль активен</string>
+    <string name="server_started">Сервер запущен</string>
 
 </resources>
