--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="action_config">Config</string>
+    <string name="action_auth">SSL / Authentication</string>
     <string name="action_clear">Clear all</string>
 
     <string name="action_divider">Communicate</string>
@@ -32,5 +33,8 @@
     <string name="server_stopped">Server stopped</string>
     <string name="module_enabled">Module enabled</string>
     <string name="server_started">Server started</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
